bug fix, allowing to remove extra curricular status of enrolment